[package]
name = "pinka"
description = "A highly available, ActivityPub-powered commenting system that bridges the gap between web comments and the Fediverse. Perfect for blogs looking to engage with Mastodon and other ActivityPub-compatible platforms."
license = "MIT OR Apache-2.0"
version = "0.1.0-beta.0"
edition = "2024"
resolver = "3"

[dependencies]
# common utility
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# common serialization and persistence
fd-lock = "4.0.2"
fjall = "2.6.3"
minicbor = { version = "0.25.1", features = ["derive", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v7"] }
# async runtime
tokio = { version = "1.42", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
# ractor actor and clustering
ractor = { version = "0.15.1", features = ["cluster"] }
ractor_cluster = { version = "0.15.1" }
tokio-rustls = "0.26.1"
# raft
rand = "0.9.0"
# activity pub
axum = "0.8.1"
bimap = "0.6.3"
jiff = "0.2.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "charset",
    "gzip",
    "json",
] }
tower-http = { version = "0.6.2", features = ["cors"] }
# http signature
aws-lc-rs = "1.12.2"
base64ct = { version = "1.6.0", features = ["alloc"] }
const-oid = { version = "0.9.6", features = ["db"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
secrecy = { version = "0.10.3", features = ["serde"] }
sha2 = "0.10.8"
# feed slurping
feed-rs = "2.3.1"
spki = "0.7.3"
# config and cli parsing
toml = "0.8.20"
xflags = "0.3.2"

[dev-dependencies]
tempfile = "3.15.0"
