[package]
name = "pinka"
repository = "https://github.com/pinka-social/pinka"
description = "A highly available, ActivityPub-powered commenting system that bridges the gap between web comments and the Fediverse. Perfect for blogs looking to engage with Mastodon and other ActivityPub-compatible platforms."
license = "MIT OR Apache-2.0"
version = "0.1.0-beta.1"
edition = "2024"
resolver = "3"

[workspace]
members = ["crates/pinka_raft"]

[dependencies]
# common utility
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
# common serialization and persistence
fd-lock = "4.0.2"
fjall = "2.6.3"
minicbor = { version = "0.26.0", features = ["derive", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v7"] }
# async runtime
tokio = { version = "1.44", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
# ractor actor and clustering
ractor = { version = "0.15.1", features = ["cluster"] }
ractor_cluster = { version = "0.15.1" }
tokio-rustls = "0.26.1"
# activity pub
axum = "0.8.1"
bimap = "0.6.3"
jiff = "0.2.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls-webpki-roots-no-provider",
    "charset",
    "gzip",
    "json",
] }
tower-http = { version = "0.6.2", features = ["cors", "set-header"] }
ammonia = "4"
# http signature
aws-lc-rs = "1.12.2"
base64ct = { version = "1.6.0", features = ["alloc"] }
const-oid = { version = "0.10.0", features = ["db"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
secrecy = { version = "0.10.3", features = ["serde"] }
sha2 = "0.10.8"
# feed slurping
feed-rs = "2.3.1"
spki = "0.8.0-rc.1"
minijinja = { version = "2.7.0", default-features = false, features = [
    "builtins",
    "debug",
    "serde",
] }
unicode-segmentation = "1.12.0"
# config and cli parsing
toml = "0.8.20"
xflags = "0.3.2"

raft = { version = "0.1.0-beta.1", path = "crates/pinka_raft", package = "pinka_raft" }

[dev-dependencies]
tempfile = "3.15.0"

[profile.release]
lto = true
codegen-units = 1
