[package]
name = "pinka_raft"
repository = "https://github.com/pinka-social/pinka"
description = "A Raft consensus algorithm implementation for Ractor"
license = "MIT OR Apache-2.0"
version = "0.1.0-beta.1"
edition = "2024"
resolver = "3"

[dependencies]
# common utility
anyhow = "1.0"
tracing = "0.1.41"
# common serialization and persistence
fjall = "2.6.3"
minicbor = { version = "0.26.0", features = ["derive", "alloc"] }
# async runtime
tokio = { version = "1.42", features = ["time"] }
# ractor actor and clustering
ractor = { version = "0.15.1", features = ["cluster"] }
ractor_cluster = { version = "0.15.1" }
# raft
rand = "0.9.0"
blocking = { version = "1.6.1", features = ["tracing"] }
