[package]
name = "simple-register"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
pinka_raft = { path = "../../" }
fjall = "2.6.7"
ractor = { version = "0.15.1", features = ["cluster"] }
ractor_cluster = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
xflags = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace]

[profile.release]
lto = true
